# tictactoeAI

./: CMakeLists.txt  board.cpp  board.h  main.cpp  tests.cpp
include/: board.h
